[project]
name = "unit-test-example"
version = "0.1.0"
description = ""
authors = [
    {name = "nicbencini",email = "nicbencini@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "unit_test_example", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
